--- a/notebooks/hillary_data_exploration.ipynb
+++ b/notebooks/hillary_data_exploration.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -193,7 +193,7 @@
        "[513115 rows x 6 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -283,114 +283,99 @@
        "      <td>FOOD_AND_BEVERAGES</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
+       "      <th>5</th>\n",
+       "      <td>0</td>\n",
+       "      <td>acc_0</td>\n",
+       "      <td>ENTERTAINMENT</td>\n",
+       "      <td>24.72</td>\n",
+       "      <td>2022-04-04</td>\n",
+       "      <td>ENTERTAINMENT</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2597483</th>\n",
-       "      <td>5941</td>\n",
-       "      <td>acc_9524</td>\n",
-       "      <td>ATM_CASH</td>\n",
-       "      <td>8.42</td>\n",
-       "      <td>2023-01-25</td>\n",
-       "      <td>ATM_CASH</td>\n",
+       "      <th>6</th>\n",
+       "      <td>0</td>\n",
+       "      <td>acc_0</td>\n",
+       "      <td>Oculus CA 04/16</td>\n",
+       "      <td>11.73</td>\n",
+       "      <td>2022-04-18</td>\n",
+       "      <td>GENERAL_MERCHANDISE</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2597484</th>\n",
-       "      <td>5941</td>\n",
-       "      <td>acc_9524</td>\n",
-       "      <td>ATM_CASH</td>\n",
-       "      <td>2.06</td>\n",
-       "      <td>2023-01-25</td>\n",
-       "      <td>ATM_CASH</td>\n",
+       "      <th>7</th>\n",
+       "      <td>0</td>\n",
+       "      <td>acc_0</td>\n",
+       "      <td>LOS GIRASOLES STOW OH 03/08</td>\n",
+       "      <td>30.04</td>\n",
+       "      <td>2022-03-09</td>\n",
+       "      <td>FOOD_AND_BEVERAGES</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2597485</th>\n",
-       "      <td>5941</td>\n",
-       "      <td>acc_9524</td>\n",
-       "      <td>ATM_CASH</td>\n",
-       "      <td>262.88</td>\n",
-       "      <td>2023-01-25</td>\n",
-       "      <td>ATM_CASH</td>\n",
+       "      <th>8</th>\n",
+       "      <td>0</td>\n",
+       "      <td>acc_0</td>\n",
+       "      <td>BUZZIS LAUNDRY 1 OH 03/28</td>\n",
+       "      <td>4.16</td>\n",
+       "      <td>2022-03-29</td>\n",
+       "      <td>GENERAL_MERCHANDISE</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2597486</th>\n",
-       "      <td>5941</td>\n",
-       "      <td>acc_9524</td>\n",
-       "      <td>ATM_CASH</td>\n",
-       "      <td>10.00</td>\n",
-       "      <td>2023-01-25</td>\n",
-       "      <td>ATM_CASH</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2597487</th>\n",
-       "      <td>5941</td>\n",
-       "      <td>acc_9524</td>\n",
-       "      <td>UNCATEGORIZED</td>\n",
-       "      <td>35.13</td>\n",
-       "      <td>2023-01-25</td>\n",
-       "      <td>UNCATEGORIZED</td>\n",
+       "      <th>9</th>\n",
+       "      <td>0</td>\n",
+       "      <td>acc_0</td>\n",
+       "      <td>BUZZIS LAUNDRY 1 OH 02/13</td>\n",
+       "      <td>1.56</td>\n",
+       "      <td>2022-02-14</td>\n",
+       "      <td>GENERAL_MERCHANDISE</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>2597488 rows × 6 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "         prism_consumer_id prism_account_id  \\\n",
-       "0                        0            acc_0   \n",
-       "1                        0            acc_0   \n",
-       "2                        0            acc_0   \n",
-       "3                        0            acc_0   \n",
-       "4                        0            acc_0   \n",
-       "...                    ...              ...   \n",
-       "2597483               5941         acc_9524   \n",
-       "2597484               5941         acc_9524   \n",
-       "2597485               5941         acc_9524   \n",
-       "2597486               5941         acc_9524   \n",
-       "2597487               5941         acc_9524   \n",
+       "   prism_consumer_id prism_account_id  \\\n",
+       "0                  0            acc_0   \n",
+       "1                  0            acc_0   \n",
+       "2                  0            acc_0   \n",
+       "3                  0            acc_0   \n",
+       "4                  0            acc_0   \n",
+       "5                  0            acc_0   \n",
+       "6                  0            acc_0   \n",
+       "7                  0            acc_0   \n",
+       "8                  0            acc_0   \n",
+       "9                  0            acc_0   \n",
        "\n",
-       "                                              memo  amount posted_date  \\\n",
-       "0                                             LOAN  900.60  2022-07-05   \n",
-       "1                                         ATM_CASH   80.00  2022-03-25   \n",
-       "2        TST* Casa Del Rio - Exp Fairlawn OH 09/24   18.42  2022-09-26   \n",
-       "3                                             LOAN  634.00  2023-01-10   \n",
-       "4                               Buffalo Wild Wings   26.47  2022-09-12   \n",
-       "...                                            ...     ...         ...   \n",
-       "2597483                                   ATM_CASH    8.42  2023-01-25   \n",
-       "2597484                                   ATM_CASH    2.06  2023-01-25   \n",
-       "2597485                                   ATM_CASH  262.88  2023-01-25   \n",
-       "2597486                                   ATM_CASH   10.00  2023-01-25   \n",
-       "2597487                              UNCATEGORIZED   35.13  2023-01-25   \n",
+       "                                        memo  amount posted_date  \\\n",
+       "0                                       LOAN  900.60  2022-07-05   \n",
+       "1                                   ATM_CASH   80.00  2022-03-25   \n",
+       "2  TST* Casa Del Rio - Exp Fairlawn OH 09/24   18.42  2022-09-26   \n",
+       "3                                       LOAN  634.00  2023-01-10   \n",
+       "4                         Buffalo Wild Wings   26.47  2022-09-12   \n",
+       "5                              ENTERTAINMENT   24.72  2022-04-04   \n",
+       "6                            Oculus CA 04/16   11.73  2022-04-18   \n",
+       "7                LOS GIRASOLES STOW OH 03/08   30.04  2022-03-09   \n",
+       "8                  BUZZIS LAUNDRY 1 OH 03/28    4.16  2022-03-29   \n",
+       "9                  BUZZIS LAUNDRY 1 OH 02/13    1.56  2022-02-14   \n",
        "\n",
-       "                   category  \n",
-       "0                      LOAN  \n",
-       "1                  ATM_CASH  \n",
-       "2        FOOD_AND_BEVERAGES  \n",
-       "3                      LOAN  \n",
-       "4        FOOD_AND_BEVERAGES  \n",
-       "...                     ...  \n",
-       "2597483            ATM_CASH  \n",
-       "2597484            ATM_CASH  \n",
-       "2597485            ATM_CASH  \n",
-       "2597486            ATM_CASH  \n",
-       "2597487       UNCATEGORIZED  \n",
-       "\n",
-       "[2597488 rows x 6 columns]"
+       "              category  \n",
+       "0                 LOAN  \n",
+       "1             ATM_CASH  \n",
+       "2   FOOD_AND_BEVERAGES  \n",
+       "3                 LOAN  \n",
+       "4   FOOD_AND_BEVERAGES  \n",
+       "5        ENTERTAINMENT  \n",
+       "6  GENERAL_MERCHANDISE  \n",
+       "7   FOOD_AND_BEVERAGES  \n",
+       "8  GENERAL_MERCHANDISE  \n",
+       "9  GENERAL_MERCHANDISE  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "outflows"
+    "outflows.head(10)"
    ]
   },
   {
@@ -2053,7 +2038,7 @@
    "source": [
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
     "\n",
-    "tfidf_vectorizer = TfidfVectorizer(ngram_range=(1, 1), max_features=500) \n",
+    "tfidf_vectorizer = TfidfVectorizer(ngram_range=(1, 1), max_features=500) #unigrams, capped at 500 \n",
     "\n",
     "tfidf_features = tfidf_vectorizer.fit_transform(cleaned_df['memo'])\n",
     "\n",
