--- a/notebooks/baseline_models.ipynb
+++ b/notebooks/baseline_models.ipynb
@@ -14,12 +14,12 @@
     "from datetime import date\n",
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
     "from sklearn.linear_model import LogisticRegression\n",
-    "from sklearn.metrics import accuracy_score\n",
+    "from sklearn.metrics import accuracy_score, roc_auc_score\n",
     "from sklearn.preprocessing import LabelEncoder\n",
     "from sklearn.model_selection import train_test_split\n",
     "\n",
-    "inflows = pd.read_parquet(\"Data/ucsd-inflows.pqt\")\n",
-    "outflows = pd.read_parquet(\"Data/ucsd-outflows.pqt\")\n",
+    "inflows = pd.read_parquet(\"../data/ucsd-inflows.pqt\")\n",
+    "outflows = pd.read_parquet(\"../data/ucsd-outflows.pqt\")\n",
     "import re\n",
     "\n",
     "def clean_text(data):\n",
@@ -285,24 +285,16 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b040892b",
+   "cell_type": "markdown",
+   "id": "e0a6346f",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Logistic Regression with tf-idf"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ecb44a38",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
    "id": "0866957f",
    "metadata": {},
    "outputs": [
@@ -312,30 +304,11 @@
      "text": [
       "Data split complete\n",
       "Vectorization complete\n",
-      "Label encoding complete\n",
-      "Logistic Regression model trained\n",
-      "Accuracy: 0.9614950380992839\n",
-      "ROC-AUC Scores per Category:\n",
-      "EDUCATION: 0.9937495928333644\n",
-      "FOOD_AND_BEVERAGES: 0.9956160161953359\n",
-      "GENERAL_MERCHANDISE: 0.9955593609414578\n",
-      "GROCERIES: 0.9981393125521718\n",
-      "MORTGAGE: 1.0\n",
-      "OVERDRAFT: 0.9999371706305867\n",
-      "PETS: 0.9986474182987582\n",
-      "RENT: 0.9968897677086999\n",
-      "TRAVEL: 0.9982747864673119\n"
+      "Label encoding complete\n"
      ]
     }
    ],
    "source": [
-    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
-    "from sklearn.preprocessing import LabelEncoder\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.linear_model import LogisticRegression\n",
-    "from sklearn.metrics import accuracy_score, roc_auc_score\n",
-    "import numpy as np\n",
-    "\n",
     "# Splitting the data into train and test sets\n",
     "X_train_text, X_test_text, y_train, y_test = train_test_split(\n",
     "    w_cleaned_outflows['memo'], \n",
@@ -361,11 +334,14 @@
     "log_reg = LogisticRegression(solver='saga', max_iter=200, n_jobs=-1)\n",
     "log_reg.fit(X_train, y_train)\n",
     "print('Logistic Regression model trained')\n",
+    "print('-----------------------------------------------------------------')\n",
+    "print()\n",
     "\n",
     "# Making predictions and calculating accuracy\n",
     "y_pred = log_reg.predict(X_test)\n",
     "accuracy = accuracy_score(y_test, y_pred)\n",
     "print(\"Accuracy:\", accuracy)\n",
+    "print()\n",
     "\n",
     "# Getting predicted probabilities\n",
     "y_prob = log_reg.predict_proba(X_test)\n",
@@ -389,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "id": "4de2da40",
    "metadata": {},
    "outputs": [],
