--- a/notebooks/baseline_models.ipynb
+++ b/notebooks/baseline_models.ipynb
@@ -417,7 +417,7 @@
    "id": "039c5eab",
    "metadata": {},
    "source": [
-    "# Random Forrest with tf-idf"
+    "# Random Forest with tf-idf"
    ]
   },
   {
